--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,65 +6,65 @@ on:
   pull_request:
 
 jobs:
-  integration:
-    env:
-      VUE_APP_API_KEY: YOUR_GOOGLE_MAPS_API_KEY
-      VUE_APP_FIREBASE_API_KEY: YOUR_FIREBASE_API_KEY
-      VUE_APP_FIREBASE_PROJECT_ID: YOUR_FIREBASE_PROJECT_ID
-      VUE_APP_FIREBASE_MESSAGING_SENDER_ID: YOUR_FIREBASE_MESSAGING_SENDER_ID
-      VUE_APP_FIREBASE_APP_ID: YOUR_FIREBASE_APP_ID
-      VUE_APP_FIREBASE_MEASUREMENT_ID: YOUR_FIREBASE_MEASUREMENT_ID
-    strategy:
-      matrix:
-        os: [ubuntu-latest, macos-latest, windows-latest]
-        node: [12]
-    runs-on: ${{ matrix.os }}
-    steps:
-    - name: Set git to use LF
-      run: |
-        git config --global core.autocrlf false
-        git config --global core.eol lf
-    - uses: actions/checkout@v1
-    - uses: actions/cache@v1
-      id: cache
-      if: matrix.os != 'windows-latest'
-      with:
-        path: ~/.npm          
-        key: ${{ matrix.os }}-node-v${{ matrix.node }}-deps-${{ hashFiles('**/package-lock.json') }}
-    - name: Get npm cache directory
-      id: npm-cache
-      if: matrix.os == 'windows-latest'
-      run: |
-        echo "::set-output name=dir::$(npm config get cache)"
-    - uses: actions/cache@v2
-      if: matrix.os == 'windows-latest'
-      with:
-        path: ${{ steps.npm-cache.outputs.dir }}
-        key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
-    - name: Install dependencies
-      run: npm ci
+  # integration:
+  #   env:
+  #     VUE_APP_API_KEY: YOUR_GOOGLE_MAPS_API_KEY
+  #     VUE_APP_FIREBASE_API_KEY: YOUR_FIREBASE_API_KEY
+  #     VUE_APP_FIREBASE_PROJECT_ID: YOUR_FIREBASE_PROJECT_ID
+  #     VUE_APP_FIREBASE_MESSAGING_SENDER_ID: YOUR_FIREBASE_MESSAGING_SENDER_ID
+  #     VUE_APP_FIREBASE_APP_ID: YOUR_FIREBASE_APP_ID
+  #     VUE_APP_FIREBASE_MEASUREMENT_ID: YOUR_FIREBASE_MEASUREMENT_ID
+  #   strategy:
+  #     matrix:
+  #       os: [ubuntu-latest, macos-latest, windows-latest]
+  #       node: [12]
+  #   runs-on: ${{ matrix.os }}
+  #   steps:
+  #   - name: Set git to use LF
+  #     run: |
+  #       git config --global core.autocrlf false
+  #       git config --global core.eol lf
+  #   - uses: actions/checkout@v1
+  #   - uses: actions/cache@v1
+  #     id: cache
+  #     if: matrix.os != 'windows-latest'
+  #     with:
+  #       path: ~/.npm          
+  #       key: ${{ matrix.os }}-node-v${{ matrix.node }}-deps-${{ hashFiles('**/package-lock.json') }}
+  #   - name: Get npm cache directory
+  #     id: npm-cache
+  #     if: matrix.os == 'windows-latest'
+  #     run: |
+  #       echo "::set-output name=dir::$(npm config get cache)"
+  #   - uses: actions/cache@v2
+  #     if: matrix.os == 'windows-latest'
+  #     with:
+  #       path: ${{ steps.npm-cache.outputs.dir }}
+  #       key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
+  #   - name: Install dependencies
+  #     run: npm ci
 
-    - name: Linter
-      run: npm run lint
+  #   - name: Linter
+  #     run: npm run lint
 
-    - name: Run unit tests
-      run: npm run test:unit
+  #   - name: Run unit tests
+  #     run: npm run test:unit
 
-    - name: Code coverage
-      if:  matrix.os == 'ubuntu-latest'
-      uses: codecov/codecov-action@v1
+  #   - name: Code coverage
+  #     if:  matrix.os == 'ubuntu-latest'
+  #     uses: codecov/codecov-action@v1
 
-    - name: Build
-      run: npm run build
+  #   - name: Build
+  #     run: npm run build
 
-    - name: Upload artifact
-      uses: actions/upload-artifact@v1
-      with:
-        name: ${{ matrix.os }}-node-v${{ matrix.node }}-build
-        path: dist
+  #   - name: Upload artifact
+  #     uses: actions/upload-artifact@v1
+  #     with:
+  #       name: ${{ matrix.os }}-node-v${{ matrix.node }}-build
+  #       path: dist
 
   cypress-chrome-firefox:
-    needs: integration
+    # needs: integration
     env:
       VUE_APP_API_KEY:  ${{ secrets.GMAP_API_KEY }}
       VUE_APP_FIREBASE_API_KEY: YOUR_FIREBASE_API_KEY
@@ -95,7 +95,7 @@ jobs:
           COMMIT_INFO_MESSAGE: ${{ github.event.pull_request.title }}
 
   cypress-edge:    
-    needs: integration
+    # needs: integration
     env:
       VUE_APP_API_KEY:  ${{ secrets.GMAP_API_KEY }}
       VUE_APP_FIREBASE_API_KEY: YOUR_FIREBASE_API_KEY
