--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "test": "npm run lint && npm run test:unit && npm run test:e2e",
     "test:unit": "vue-cli-service test:unit",
     "test:e2e": "vue-cli-service test:e2e",
-    "c": "cypress",
+    "cypress": "cypress",
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
