--- a/package.json
+++ b/package.json
@@ -77,6 +77,6 @@
   "bugs": {
     "url": "https://github.com/GeoGuess/Geoguess/issues"
   },
-  "homepage": "hhttps://github.com/GeoGuess/Geoguess#readme",
+  "homepage": "https://github.com/GeoGuess/Geoguess#readme",
   "license": "MIT"
 }
