--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -2,6 +2,5 @@
     "trailingComma": "es5",
     "tabWidth": 4,
     "semi": true,
-    "singleQuote": true,
-	"endOfLine": "lf"
+    "singleQuote": true
 }
