--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "test": "npm run lint && npm run test:unit && npm run test:e2e -- --headless",
-    "test:unit": "vue-cli-service test:unit",
+    "test": "npm run lint && npm run test:unit && npm run test:e2e",
+    "test:unit": "cypress run",
     "test:e2e": "vue-cli-service test:e2e",
     "cypress": "cypress",
     "lint": "vue-cli-service lint"
@@ -36,7 +36,6 @@
   "devDependencies": {
     "@babel/core": "^7.12.10",
     "@vue/cli-plugin-babel": "^3.12.1",
-    "@vue/cli-plugin-e2e-cypress": "^4.5.11",
     "@vue/cli-plugin-eslint": "^3.12.1",
     "@vue/cli-plugin-pwa": "^3.12.1",
     "@vue/cli-plugin-unit-jest": "^4.5.11",
@@ -44,7 +43,7 @@
     "@vue/test-utils": "^1.1.2",
     "babel-eslint": "^10.1.0",
     "babel-loader": "^8.2.2",
-    "cypress": "^6.5.0",
+    "cypress": "^6.7.1",
     "eslint": "^5.16.0",
     "eslint-config-prettier": "^6.15.0",
     "eslint-plugin-prettier": "^3.3.0",
