--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "test": "npm run lint && npm run test:unit && npm run test:e2e",
-    "test:unit": "cypress run",
-    "test:e2e": "vue-cli-service test:e2e",
+    "test:unit": "vue-cli-service test:unit",
+    "test:e2e": "cypress run",
     "cypress": "cypress",
     "lint": "vue-cli-service lint"
   },
