--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,6 +6,19 @@ on:
   pull_request:
 
 jobs:
+  checksecret:
+    name: check if MY_SECRET is set in github secrets
+    runs-on: ubuntu-latest
+    outputs:
+      is_MY_SECRET_set: ${{ steps.checksecret_job.outputs.is_MY_SECRET_set }}
+    steps:
+      - name: Check whether unity activation requests should be done
+        id: checksecret_job
+        env:
+            MY_SECRET: ${{ secrets.GMAP_API_KEY }}
+        run: |
+            echo "is_MY_SECRET_set: ${{ env.MY_SECRET != '' }}"
+            echo "::set-output name=is_MY_SECRET_set::${{ env.MY_SECRET != '' }}"
   integration:
     env:
       VUE_APP_API_KEY: YOUR_GOOGLE_MAPS_API_KEY
@@ -65,9 +78,10 @@ jobs:
 
 
   cypress-chrome-firefox-simple:
+    needs: [checksecret, integration]
+    if: needs.checksecret.outputs.is_MY_SECRET_set == 'false'
     runs-on: ubuntu-16.04
     name: E2E on Ubuntu
-    if: ${{ !secrets.GMAP_API_KEY }}
     strategy:
       fail-fast: false
       matrix:
@@ -92,8 +106,8 @@ jobs:
 
 
   cypress-chrome-firefox:
-    needs: integration
-    if: ${{ secrets.GMAP_API_KEY }}
+    needs: [checksecret, integration]
+    if: needs.checksecret.outputs.is_MY_SECRET_set == 'true'
     env:
       VUE_APP_API_KEY:  ${{ secrets.GMAP_API_KEY }}
       VUE_APP_FIREBASE_API_KEY:  ${{ secrets.VUE_APP_FIREBASE_API_KEY }}
